# dolog

./: .gitignore  AGENTS.md  Cargo.toml  README.md  nx.json  package.json  seed.sql  tsconfig.base.json  tsconfig.json
apps/api/: package.json  project.json  tsconfig.app.json  vite.config.ts  wrangler.toml
apps/api/src/: index.test.ts
apps/service/: drizzle.config.ts  package.json  project.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc  wrangler.toml
apps/service/drizzle/: migrations.js
apps/service/drizzle/meta/: _journal.json
apps/service/src/: index.ts
apps/service/src/db/: schema.ts
apps/service/src/db/drizzle/: 0000_great_sabretooth.sql  0000_handy_angel.sql  migrations.js
apps/service/src/db/drizzle/meta/: 0000_snapshot.json  _journal.json
crates/dolog/: Cargo.toml
crates/dolog/src/: cli.rs  lib.rs  log_export.rs  main.rs  trigger.rs
crates/dolog/tests/: cli.rs  trigger_lifecycle.rs
dolog-cli/: SKILL.md
dolog-cli/references/: log-status.md  trigger-status.md
skills/dolog-cli/: SKILL.md
skills/dolog-cli/references/: log-export.md  trigger-generate.md
