[package]
name = "dolog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
rusqlite.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
